# BestFeatureRotoscope

./: README.md
code/: magnitudeGradient.m  main.m
cpp/: CMakeLists.txt  main.cpp  main.hpp  roto.cpp  roto.hpp
output/: rotoLouis.avi
